--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lodash": "^4.17.21",
     "lodash.snakecase": "^4.1.1",
     "magic-bytes.js": "^1.10.0",
+    "mongoose": "^8.3.0",
+    "nodemon": "^3.1.0",
     "ts-mixer": "^6.0.4",
     "tslib": "^2.6.2",
     "undici": "^5.27.2",
